# hello_opencv

./: CMakeLists.txt  cv_camera_main.cpp
